package by.itacademy.hw20.task1.model.hotel;

public enum RoomStatus {
    SERVICED,
    REPAIRED
}
